<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

            <TextView
                android:id="@+id/lbl_start_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/lbl_start_header"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/proxy_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/proxy_explanation"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/btn_toggle_proxy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="toggleProxy"
                android:text="@string/start_proxy" />

            <TextView
                android:id="@+id/lbl_wrapper_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/lbl_wrapper_settings"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <CheckBox
                android:id="@+id/chk_autostart"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="toggleAutostart"
                android:text="@string/chk_autostart" />
        
    </LinearLayout>

</LinearLayout>
